# minichem

./: .gitignore  CMakeLists.txt  README.md  TODO
docs/: Makefile  manual-refs.bib  manual_en.tex  manual_ru.aux  manual_ru.out  manual_ru.tex
include/: aoints.h  basis.h  chem.h  input.h  ints.h  lexer.h  linalg.h  molden.h  scf.h  sys.h  util.h  visual.h
src/: .gitignore  CH3.inp  CH4.inp  CH4.nw  CH4.out  CO.cfock  CO.db  CO.inp  CO.movecs  CO.nw  CO.zmat  H2O.nw  HeH+.inp  Kernel.cc  Kernel.h  LiH.cfock  LiH.db  LiH.inp  LiH.movecs  LiH.nw  LiH.nwo  LiH.oinp  LiH.oinp.gbw  LiH.oinp.ges  LiH.out  LiH.zmat  LiH_bas.inp  LiH_mp2.nw  LiH_mp2.nwo  Makefile  Makefile_c  O_atom.nw  OutputStream.h  buildno.sh  ch4.mos  configure  configure.ac  errlog.txt  h2.out  h2o.b  (+18 more)
src/4index/: Makefile
src/aoints/: 1e.c  2e.c  CMakeLists.txt  aoints.c  boys.c  ints_print.c
src/basissets/: 3-21G  6-31G**  aug-cc-pVQZ  cc-pVDZ  cc-pVTZ  def2-SVP  sto-3g
src/corr/: Makefile
src/hartree-fock-example/: cmd  hartree-fock.cc
src/hf/: Makefile  good.txt  hartree-fock.cc
src/input/: CMakeLists.txt  Makefile  basis.c  basis.h  chem.c  chem.h  inp.c  input.h  interactive.c  lexer.c  lexer.h  qslex.c  qslex.h  rtdb  rtdb.c  wf.h
src/lib/: Makefile
src/lib/basis/: BasisSet.cc  BasisSet.h  Makefile
src/lib/chem/: Elements.cc  Elements.h  Makefile  Molecule.cc  Molecule.h
src/lib/except/: SyntaxError.h
src/lib/io/: Lexer.cc  Lexer.h  Log.cc  Log.h  Makefile  OutputStream.cc  OutputStream.h  Token.cc  Token.h
src/lib/qscript/: Makefile  QS_Object.cc  QS_Object.h  QS_RuntimeError.cc  QS_RuntimeError.h  QS_Scope.cc  QS_Scope.h
src/lib/wf/: Makefile  RhfWavefunction.cc  RhfWavefunction.h  UhfWavefunction.cc  UhfWavefunction.h  Wavefunction.cc  Wavefunction.h
src/linalg/: CMakeLists.txt  linalg.c
src/scf/: 1e.c  2e.c  CMakeLists.txt  Diis.cc  Diis.h  Makefile  analysis.c  boys.c  diis.c  eht.c  ints.h  ints_print.c  molden.c  molden.h  rhf.c  rhf.cc  scf.c  scf.h  scf_input.c  scf_old.c  scf_old2.c  uhf.c  uhf.cc
src/scf_c/: Makefile  diis.c  rhf.c  scf.h
src/sys/: CMakeLists.txt  fastio.c  time.c
src/util/: CMakeLists.txt  Makefile  buildno.c  decor.c  errors.c  memory.c  misc.c  timer.c  util.h
src/visual/: CMakeLists.txt  molden.c
test/: AOINTS1  C2H4.nw  C2H4.out  C4H10.nw  C4H10_direct.out  C4H10_nodirect.out  C4H4.nw  C4H4.nwo  C4H4_nosymm_rhf.nw  C6H6.nw  C6H6.nw.test.out  (+52 more)
